--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-Running DPDK inside a Docker-formatted Linux Container
+Can you run Intel's Data-plane Development Kit (DPDK) in a container?  Yep.
+
+http://developerblog.redhat.com/2015/06/02/can-you-run-intels-data-plane-development-kit-dpdk-in-a-docker-container-yep/
